# Games-Engineering

./: CMakeLists.txt  README.md
lib_tile_level_loader/: LevelSystem.cpp  LevelSystem.h
practical_1/: main.cpp
practical_2/: main.cpp
practical_3/: Ship.cpp  bullet.cpp  bullet.h  game.h  main.cpp  ship.h
practical_4/: entity.cpp  main.cpp  player.cpp  player.h
